syntax = "proto3";

option csharp_namespace = "ProductionStructure.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "Common/common.proto";
import "Common/entities.proto";

service WorkCenter{
	rpc CreateWorkCenter (CreateWorkCenterRequest) returns (WorkCenterDTO);
	rpc GetWorkCenter (GetRequest) returns (NullableWorkCenterDTO);
	rpc GetAllWorkCenters (google.protobuf.Empty) returns (WorkCenters);
	rpc UpdateWorkCenter (WorkCenterDTO) returns (google.protobuf.Empty);
	rpc DeleteWorkCenter (DeleteRequest) returns (google.protobuf.Empty);
}

message CreateWorkCenterRequest{
	string name = 1;
	AreaDTO area = 2;
}